templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: exercise
  name: exercise
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exercise
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: exercise
    spec:
      containers:
      - image: harbor.wbl.com/fitness/exercise:latest
        name: exercise
        volumeMounts:
        - mountPath: /etc/localtime
          name: tz-seoul
        resources: {}
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
          type: ""
        name: tz-seoul
status: {}
---
