templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: exercise
    release: fitness
  name: exercise
  namespace: fitness
spec:
  ports:
  - name: http-svc
    nodePort: 32671
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exercise
  type: NodePort
status:
  loadBalancer: {}
---
